
- Installation directory for debug configuration uses bin and lib instead of 
  bind and libd , to match the OCE behavoir
  
Thanks to poelmanc:
 - Updates to let oce-win-bundle work as subdirectory in 
   a project cmake tree (see oce related changes)
 - Compiler fixes

0.11.0

Restored support for all release configuration types (thanks to heyuqi)
Builds with mingw64 
Updated to gl2ps 1.3.7
Updated to freetype 2.4.10
Updated to FreeImage 3.15.4

0.4.0 

+ Tested with NMake
* Changed the install dir to install in Win32/lib , Win64/lib to allow installing 32bits
and 64bits in the same prefix

0.3.0 -- First Usable version